Changed List.of to Arrays.asList and changed the settings to jdk 8. Also changed the file to be under /tmp.