@@ -6,6 +6,7 @@ import org.pokemon.dal.*;
 import org.pokemon.model.Attribute;
 import org.pokemon.model.Pokemon;
 
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -18,14 +19,14 @@ public class PokemonApp {
         HighestAttackHandler highestAttackHandler = new HighestAttackHandler();
         PokemonStreamAcceptor pokemonStreamAcceptor = new PokemonStreamAcceptor();
         PokemonStreamHandler pokemonStreamHandler = new PokemonStreamHandler(
-                List.of(maxHpHandler,
+                Arrays.asList(maxHpHandler,
                         totalHpHandler,
                         highestAttackHandler)
         );
         PokemonFileDAO pokemonFileDAO = new PokemonFileDAO(
                 pokemonStreamAcceptor,
                 pokemonStreamHandler,
-                "C:\\Users\\LENOVO\\Downloads\\pokemon.csv");
+                "/tmp/pokemon.csv");
         PokemonBL pokemonBL = new PokemonBL(pokemonFileDAO);
 
         List<Pokemon> pokemons = pokemonBL.getAll();
